# festivus

./: .gitignore  .travis.yml  README  README.md  festivus.py  index.html  pyproject.toml  stats.csv  stats.py
.github/workflows/: publish.yml
España/Andalucía/Sevilla/: festivus.ics
España/Cataluña/Barcelona/: festivus.ics
España/Comunidad de Madrid/Madrid/: festivus.ics
España/Comunitat Valenciana/Betera/: festivus.ics
España/Comunitat Valenciana/Burjassot/: festivus.ics
España/Comunitat Valenciana/Paterna/: festivus.ics
España/Illes Balears/Palma de Mallorca/: festivus.ics
España/Illes Balears/Sóller/: festivus.ics
data/España/Andalucía/Sevilla/: 2022.cal  2024.cal
data/España/Cataluña/Barcelona/: 2020.cal  2021.cal  2022.cal  2023.cal  2024.cal  2025.cal  2026.cal
data/España/Comunidad de Madrid/Madrid/: 2020.cal  2021.cal  2022.cal  2023.cal  2024.cal  2025.cal  2026.cal
data/España/Comunitat Valenciana/Betera/: 2024.cal
data/España/Comunitat Valenciana/Burjassot/: 2021.cal  2022.cal
data/España/Comunitat Valenciana/Paterna/: 2021.cal  2022.cal
data/España/Galicia/A Coruña/: 2024.cal
data/España/Illes Balears/Palma de Mallorca/: 2022.cal  2023.cal  2024.cal  2025.cal
data/España/Illes Balears/Sóller/: 2022.cal
data/España/País Valencià/València/: 2020.cal  2021.cal
