[tool.poetry]
name = "festivus"
version = "0.1.0"
description = ""
authors = ["alex <alex@pdp7.net>"]

[tool.poetry.dependencies]
python = ">=3.7"
ics = "^0.6"

[tool.poetry.dev-dependencies]
ipython = "*"
ipdb = "*"
black = {version = "*", allow-prereleases = true}
flake8 = "*"
flake8-black = "*"
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
